--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Files and Folder Srtucture</title>
+    <title>Garden</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-slider.css">
     <link rel="stylesheet" href="css/mainStyles.css">
@@ -24,11 +24,11 @@
 
                 <div class="col-lg-4">
 
-
-                    <div class="col-lg-12 h-50 border rounded" style="margin-right: 2%;">
-                        <h5>Messages</h5>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://obs.ninja/?view=frank_group5&audiodevice=0&roombitrate=500"
+                            allow="camera;microphone">
+                        </iframe>
                     </div>
-
 
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://obs.ninja/?room=frank_group5&audiodevice=0&roombitrate=500"
@@ -42,12 +42,11 @@
                 <div class="col-lg-8">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe
-                            src="https://player.twitch.tv/?channel=frankroomfive&parent=frankwomencollective.github.io&muted=false"
+                            src="https://obs.ninja/?view=pyramid&bitrate=5000"
                             allowfullscreen class="second-row" title="Living Room"></iframe>
                     </div>
                 </div>
             </div>
-
 
             <div class="row justify-content-end" style="padding-top: 1.5%; padding-left: 0%;">
 
@@ -128,25 +127,37 @@
     <script>
 
         var topic = "pixelGarden"
+
         var sliderPan = document.getElementById("sliderPan");
         var sliderTilt = document.getElementById("sliderTilt");
         var sliderZoom = document.getElementById("sliderZoom");
-
-
+        var sliderOffset = document.getElementById("sliderOffset");
+        var sliderSpeed = document.getElementById("sliderSpeed");
+        var sliderPeriod = document.getElementById("sliderPeriod");
+        var sliderAmplitude = document.getElementById("sliderAmplitude");
 
 
         sliderPan.oninput = function() {
             PublishMessage("Pan/" + String(this.value), topic);
         }
-
         sliderTilt.oninput = function() {
             PublishMessage("Tilt/" + String(this.value), topic);
         }
-
         sliderZoom.oninput = function() {
             PublishMessage("Zoom/" + String(this.value), topic);
         }
-
+        sliderOffset.oninput = function() {
+            PublishMessage("Offset/" + String(this.value), topic);
+        }
+        sliderSpeed.oninput = function() {
+            PublishMessage("Speed/" + String(this.value), topic);
+        }
+        sliderPeriod.oninput = function() {
+            PublishMessage("Period/" + String(this.value), topic);
+        }
+        sliderAmplitude.oninput = function() {
+            PublishMessage("Amplitude/" + String(this.value), topic);
+        }
 
     </script>
 
