--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <div class="col-lg-4">
 
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://obs.ninja/?view=frank_group5&audiodevice=0&roombitrate=500"
+                        <iframe src="https://obs.ninja/?scene=0&room=frank_group5&roombitrate=500"
                             allow="camera;microphone">
                         </iframe>
                     </div>
 
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://obs.ninja/?room=frank_group5&audiodevice=0&roombitrate=500"
+                        <iframe src="https://obs.ninja/?room=frank_group5&roombitrate=500"
                             allow="camera;microphone">
                         </iframe>
                     </div>
