--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://obs.ninja/?room=frank_group5&roombitrate=500"
+                        <iframe src="https://obs.ninja/?room=frank_group5&view"
                              allow="camera;microphone">
                         </iframe>
                     </div>
