--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!--Main View and Room Select  -->
             <div class="row">
 
-                <div class="col-lg-4">
+                <div class="col-4">
 
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe src="https://obs.ninja/?scene=0&room=frank_group5&roombitrate=500"
@@ -39,7 +39,7 @@
        
                 </div>
 
-                <div class="col-lg-8">
+                <div class="col-8">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe
                             src="https://obs.ninja/?view=pyramid&bitrate=5000"
