updates to styling

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="row justify-content-end" style="padding-top: 1.5%; padding-left: 0%;">
 
-                <div class="col-lg-4 border rounded " style="margin-left: 1%;">
+                <div class="col-md-4 border rounded " style="margin-left: 1%;">
                     <h5>Scene Controls</h5>
                     <div class="col-6 d-table">       
                         <div class="d-table-cell" style="text-align: center;">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 border rounded" style="margin-left: 1%;">
+                <div class="col-md-4 border rounded" style="margin-left: 1%;">
                     <h5>Camera Controls</h5>
 
                     <div class="col-12 d-table">
