--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section class="home_header">
         <div class="container">
             <!--Main View and Room Select  -->
-            <div class="row">
+            <div class="row justify-content-center">
 
-                <div class="col-4 border rounded">
+                <div class="col-3 border rounded" style="vertical-align: middle;">
 
                     <div class="embed-responsive embed-responsive-1by1">
                         <iframe src="https://obs.ninja/?scene=0&room=frank_group5&roombitrate=500"
@@ -30,7 +30,7 @@
                         </iframe>
                     </div>
 
-                    <div class="embed-responsive embed-responsive-16by9">
+                    <div class="embed-responsive embed-responsive-1by1">
                         <iframe src="https://obs.ninja/?room=frank_group5&view" allow="camera;microphone">
                         </iframe>
                     </div>
@@ -44,11 +44,11 @@
                             title="Living Room"></iframe>
                     </div>
 
-                    <div class="d-flex flex-row justify-content-center" style="padding-top: 1.5%; padding-left: 0%;">
+                    <div class="row justify-content-center" style="padding-top: 1.5%; padding-left: 0%;">
 
-                        <div class="col-5 border rounded " style="margin-left: 1%;">
+                        <div class="col-sm-6 border rounded ">
                             <h5>Scene Controls</h5>
-                            <div class="col-6 d-table">
+                            <div class="col-12 d-table">
                                 <div class="d-table-cell" style="text-align: center;">
                                     <p>Offset</p>
                                     <input type="range" min="1" max="100" value="50" class="vertical" orient="vertical"
@@ -75,7 +75,7 @@
                             </div>
                         </div>
 
-                        <div class="col-5 border rounded" style="margin-left: 1%;">
+                        <div class="col-sm-6 border rounded">
                             <h5>Camera Controls</h5>
 
                             <div class="col-12 d-table">
