--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@
                             <div class="col-12 d-table">
                                 <div class="d-table-cell" style="text-align: center;">
                                     <p>Offset</p>
-                                    <input type="range" min="1" max="100" value="50" class="vertical" orient="vertical"
+                                    <input type="range" min="-1.0" max="1.0" value="0" class="vertical" step=".01" orient="vertical"
                                         id="sliderOffset">
                                 </div>
 
                                 <div class="d-table-cell" style="text-align: center;">
                                     <p>Speed</p>
-                                    <input type="range" min="1" max="100" value="50" class="vertical" orient="vertical"
+                                    <input type="range" min="0" max="1.0" value=".1" class="vertical" step=".01" orient="vertical"
                                         id="sliderSpeed">
                                 </div>
 
                                 <div class="d-table-cell" style="text-align: center;">
                                     <p>Period</p>
-                                    <input type="range" min="1" max="100" value="50" class="vertical" orient="vertical"
+                                    <input type="range" min="0.0" max="10.0" value="1" class="vertical" step=".01" orient="vertical"
                                         id="sliderPeriod">
                                 </div>
 
                                 <div class="d-table-cell" style="text-align: center;">
                                     <p>Amplitude</p>
-                                    <input type="range" min="1" max="100" value="50" class="vertical" orient="vertical"
+                                    <input type="range" min="0.0" max="3.0" value="1" class="vertical" step=".01" orient="vertical"
                                         id="sliderAmplitude">
                                 </div>
                             </div>
