working with sliders

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                     <div class="row justify-content-center" style="padding-top: 1.5%; padding-left: 0%;">
 
-                        <div class="col-sm-8 border rounded ">
+                        <div class="col-md-8 border rounded ">
                             <h5>Scene Controls</h5>
                             <div class="col-12 d-table">
                                 <div class="d-table-cell" style="text-align: center;">
@@ -90,7 +90,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-4 border rounded">
+                        <div class="col-md-4 border rounded">
                             <h5>Camera Controls</h5>
 
                             <div class="col-12 d-table">
